--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -119,7 +119,7 @@ jobs:
           sudo chmod -R 777 ./certs 
           cp opentdf-example.yaml opentdf.yaml
         if: matrix.crypto == 'standard'
-      - run: docker compose up
+      - run: docker compose up -d --wait --wait-timeout 240
       - run: go run ./service provision keycloak
       - uses: JarvusInnovations/background-action@2428e7b970a846423095c79d43f759abf979a635
         name: start server in background
