--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 services:
   keycloak:
     volumes:
-    - ./certs/localhost.crt:/etc/x509/tls/localhost.crt
-    - ./certs/localhost.key:/etc/x509/tls/localhost.key
-    - ./certs/ca.jks:/truststore/truststore.jks
+    - ./keys/localhost.crt:/etc/x509/tls/localhost.crt
+    - ./keys/localhost.key:/etc/x509/tls/localhost.key
+    - ./keys/ca.jks:/truststore/truststore.jks
     # This is kc 24.0.1 with opentdf protocol mapper on board
     image: ghcr.io/opentdf/keycloak:sha-8a6d35a
     restart: always
