--- a/opentdf-example-no-kas.yaml
+++ b/opentdf-example-no-kas.yaml
@@ -17,7 +17,7 @@ server:
   auth:
     enabled: false
     audience: "http://localhost:8080"
-    issuer: https://localhost:8443/auth/realms/opentdf
+    issuer: http://localhost:8888/auth/realms/tdf
   grpc:
     reflectionEnabled: true # Default is false
   hsm:
