--- a/.github/workflows/lint-all.yaml
+++ b/.github/workflows/lint-all.yaml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - main
-      # Remove?
-      - fix/701-go-linting
+  pull_request:
+    branches:
+      - main
 
 jobs:
   go:
