--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -23,6 +23,9 @@ services:
   authorization:
     enabled: true
     ersUrl: http://localhost:8080/entityresolution/resolve
+    clientid: tdf-authorization-svc
+    clientsecret: secret
+    tokenEndpoint: http://localhost:8888/auth/realms/opentdf/protocol/openid-connect/token
 server:
   auth:
     enabled: true
