--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -53,13 +53,12 @@ jobs:
       - run: go mod download
       - run: go mod verify
       - name: golangci-lint
-        #uses: golangci/golangci-lint-action@3cfe3a4abbb849e10058ce4af15d205b6da42804
-        uses: strantalis/golangci-lint-action@f4e979f5b36068d69d340547f66c991dca8b70ef
+        uses: golangci/golangci-lint-action@9d1e0624a798bb64f6c3cea93db47765312263dc
         with:
           version: v1.56
           working-directory: ${{ matrix.directory }}
           skip-cache: true
-          only-new-issues: ${{ (github.event_name == 'pull_request' || github.event_name == 'merge_group') }}
+          only-new-issues: true
           args: --out-format=colored-line-number
       - name: Install softHSM
         if: matrix.directory == 'service'
