--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -51,8 +51,8 @@ jobs:
             docs
             sdk
             policy
-            key-access
-            authorization
+            kas
+            authz
 
   go:
     runs-on: ubuntu-22.04
