--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -106,6 +106,15 @@ jobs:
         working-directory: ${{ matrix.directory }}
       - if: matrix.directory == 'service'
         run: go test ./service/integration -race -failfast
+      - name: check go fmt and go mod tidy
+        run: |-
+          go mod tidy
+          go fmt ./...
+          git restore go.sum
+      - run: git diff
+      - run: git diff-files --ignore-submodules
+      - name: Check that files have been formatted before PR submission; see above for error details
+        run: git diff-files --quiet --ignore-submodules
 
   integration:
     name: integration tests
@@ -213,19 +222,13 @@ jobs:
       - run: make proto-generate
       - name: Restore go.mod after installing protoc-gen-doc
         run: git restore {service,protocol/go}/go.{mod,sum}
-      - name: check go fmt and go mod tidy
+      - name: validate go mod tidy
         run: |-
-          for x in {examples,lib/{fixtures,ocrypto},protocol/go,sdk,service}; do
-            (
-              cd "${x}"
-              go mod tidy
-              go fmt ./...
-              git restore go.sum
-            )
-          done
+          go mod tidy
+          git restore go.sum
       - run: git diff
       - run: git diff-files --ignore-submodules
-      - name: Check that files have been formatted before PR submission
+      - name: Check that make proto-generate has run before PR submission; see above for error details
         run: git diff-files --quiet --ignore-submodules
   ci:
     needs:
