--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -82,7 +82,9 @@ jobs:
             sdk/go.sum
             service/go.sum
       - run: go mod download
+        working-directory: ${{ matrix.directory }}
       - run: go mod verify
+        working-directory: ${{ matrix.directory }}
       - name: golangci-lint
         uses: golangci/golangci-lint-action@9d1e0624a798bb64f6c3cea93db47765312263dc
         with:
@@ -111,6 +113,7 @@ jobs:
           go mod tidy
           go fmt ./...
           git restore go.sum
+        working-directory: ${{ matrix.directory }}
       - run: git diff
       - run: git diff-files --ignore-submodules
       - name: Check that files have been formatted before PR submission; see above for error details
@@ -224,6 +227,7 @@ jobs:
         run: git restore {service,protocol/go}/go.{mod,sum}
       - name: validate go mod tidy
         run: |-
+          cd protocol/go
           go mod tidy
           git restore go.sum
       - run: git diff
