--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -30,11 +30,8 @@ server:
   auth:
     enabled: true
     enforceDPoP: false
-    audience: "http://localhost:8080"
+    audience: http://localhost:8080
     issuer: http://localhost:8888/auth/realms/opentdf
-    clients:
-      - "opentdf"
-      - "opentdf-sdk"
     policy:
       ## Default policy for all requests
       default: #"role:readonly"
