--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
   args_bin = ["start"]
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ./service"
+  cmd = "go build -o ./tmp/main --tags=opentdf.hsm ./service"
   delay = 0
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs", "examples"]
   exclude_file = []
