remove ersUrl camel casing in config

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -15,7 +15,7 @@ services:
     enabled: true
   authorization:
     enabled: true
-    ersUrl: http://localhost:8080/entityresolution/resolve
+    ersurl: http://localhost:8080/entityresolution/resolve
     clientid: tdf-authorization-svc
     clientsecret: secret
     tokenEndpoint: http://localhost:8888/auth/realms/opentdf/protocol/openid-connect/token
