--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -22,7 +22,7 @@ services:
     legacykeycloak: true
   authorization:
     enabled: true
-    ersUrl: http://localhost:8080/entityresolution/resolve
+    ersurl: http://localhost:8080/entityresolution/resolve
     clientid: tdf-authorization-svc
     clientsecret: secret
     tokenEndpoint: http://keycloak:8888/auth/realms/opentdf/protocol/openid-connect/token
