--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -5,8 +5,6 @@ env:
 
 on:
   pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
@@ -130,10 +128,14 @@ jobs:
 
   integration:
     name: integration tests
+    needs:
+      - go
+      - buflint
     runs-on: ubuntu-22.04
     strategy:
       matrix:
         crypto:
+          - hsm
           - standard
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
@@ -200,6 +202,7 @@ jobs:
   image:
     name: image build
     runs-on: ubuntu-22.04
+    needs: integration
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: docker/setup-buildx-action@v3
