add token exchange roundtrip tests

--- a/service/cmd/keycloak_data.yaml
+++ b/service/cmd/keycloak_data.yaml
@@ -41,6 +41,7 @@ realms:
           enabled: true
           name: opentdf-sdk
           serviceAccountsEnabled: true
+          directAccessGrantsEnabled: true
           clientAuthenticatorType: client-secret
           secret: secret
           protocolMappers:
