--- a/service/cmd/keycloak_data.yaml
+++ b/service/cmd/keycloak_data.yaml
@@ -49,6 +49,18 @@ realms:
         sa_realm_roles: 
           - opentdf-readonly
       - client:
+          clientID: opentdf-sdk-cert-exchange
+          enabled: true
+          name: opentdf-sdk-cert-exchange
+          serviceAccountsEnabled: true
+          directAccessGrantsEnabled: true
+          clientAuthenticatorType: client-secret
+          secret: secret
+          protocolMappers:
+            - *customAudMapper
+        sa_realm_roles: 
+          - opentdf-readonly
+      - client:
           clientID: tdf-entity-resolution
           enabled: true
           name: tdf-entity-resolution
@@ -101,5 +113,8 @@ realms:
     token_exchanges:
       - start_client: opentdf
         target_client: opentdf-sdk
+    cert_exchanges:
+      x509-auth-flow:
+        - opentdf-sdk-cert-exchange
 
  
