--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -63,10 +63,10 @@ server:
         p,	role:user,		kas.AccessService/PublicKey,						read,			allow
         p,	role:user,		kas.AccessService/Rewrap, 			        write,		allow
         p,	role:user,		/,																      read,			allow
+        p,	role:user,		/entityresolution/resolve,							write,  	allow
         p,	role:user,		/kas/kas_public_key,  									read,			allow
         p,	role:user,		/kas/v2/kas_public_key,									read,			allow
         p,	role:user,		/kas/v2/rewrap,													write,		allow
-        p,	role:user,		/entityresolution/resolve,							write,  	allow
         
         # Role: Org-Admin
         ## gRPC routes
@@ -74,7 +74,7 @@ server:
         p,	role:org-admin,		kasregistry.*,													*,			allow
         p,	role:org-admin,		kas.AccessService/LegacyPublicKey,			*,			allow
         p,	role:org-admin,		kas.AccessService/PublicKey,						*,			allow
-        p,	role:org-admin,		kas.AccessService/Rewrap, 			            *,			allow
+        p,	role:org-admin,		kas.AccessService/Rewrap, 			        *,			allow
         ## HTTP routes
         p,	role:org-admin,		/health,																*,			allow
         p,	role:org-admin,		/attributes*,														*,			allow
@@ -83,6 +83,7 @@ server:
         p,	role:org-admin,		/resource-mappings*,										*,			allow
         p,	role:org-admin,		/key-access-servers*,										*,			allow
         p,	role:org-admin,		/kas.AccessService/LegacyPublicKey,			*,			allow
+        p,	role:org-admin,		/kas/v2/rewrap,													write,	allow
         # add unsafe actions to the org-admin role
         
         # Role: Admin
@@ -124,10 +125,10 @@ server:
         p,	role:unknown,			kas.AccessService/LegacyPublicKey,			other,	allow
         p,	role:unknown,			kas.AccessService/PublicKey,						other,	allow
         ## HTTP routes
+        p,	role:unknown,			/entityresolution/resolve,							write,	allow
         p,	role:unknown,			/health,																read,		allow
         p,	role:unknown,			/kas/v2/kas_public_key,									read,		allow
         p,	role:unknown,			/kas/kas_public_key,										read,		allow
-        p,	role:unknown,			/entityresolution/resolve,							write,	allow
 
       ## Custom model (see https://casbin.org/docs/syntax-for-models/)
       model: #|
@@ -174,6 +175,15 @@ server:
     reflectionEnabled: true # Default is false
   cryptoProvider:
     type: standard
+    hsm:
+      # As configured by init-temp-keys.sh --hsm
+      pin: "12345"
+      slotlabel: "dev-token"
+      keys:
+        rsa:
+          label: development-rsa-kas
+        ec:
+          label: development-ec-kas
     standard:
       rsa:
         123:
