--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -132,6 +132,7 @@ jobs:
     strategy:
       matrix:
         crypto:
+          - hsm
           - standard
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
