Update init-temp-keys script execution in GitHub workflow
This commit modifies the execution of the `init-temp-keys.sh` script in `.github/workflows/checks.yaml` file. The change includes passing '--output ./keys/' argument to the script to dictate where the keys will be stored. This specifies the directory for the keys and enhances organization.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -164,7 +164,7 @@ jobs:
           cp opentdf-with-hsm.yaml opentdf.yaml
         if: matrix.crypto == 'hsm'
       - run: |
-          .github/scripts/init-temp-keys.sh
+          .github/scripts/init-temp-keys.sh --output ./keys/
           cp opentdf-dev.yaml opentdf.yaml
         if: matrix.crypto == 'standard'
       - name: Added Trusted Certs
