Update paths for key files and init-temp-keys script
Updated the paths for secp256r1, secp384r1, and secp521r1 key files in the opentdf-dev.yaml file, removing the '/keys/' prefix. Also modified the path in the init-temp-keys.sh command within checks.yaml. This adjustment accommodates a change in file structure and ensures consistent script execution.

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -164,7 +164,7 @@ jobs:
           cp opentdf-with-hsm.yaml opentdf.yaml
         if: matrix.crypto == 'hsm'
       - run: |
-          .github/scripts/init-temp-keys.sh --output ./keys/
+          .github/scripts/init-temp-keys.sh
           cp opentdf-dev.yaml opentdf.yaml
         if: matrix.crypto == 'standard'
       - name: Added Trusted Certs
