--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -98,15 +98,15 @@ server:
     standard:
       rsa:
         123:
-          privateKeyPath: /keys/kas-private.pem
-          publicKeyPath: /keys/kas-cert.pem
+          privatekeypath: /keys/kas-private.pem
+          publickeypath: /keys/kas-cert.pem
         456:
-          privateKeyPath: /keys/kas-private.pem
-          publicKeyPath: /keys/kas-cert.pem
+          privatekeypath: /keys/kas-private.pem
+          publickeypath: /keys/kas-cert.pem
       ec:
         123:
-          privateKeyPath: /keys/kas-ec-private.pem
-          publicKeyPath: /keys/kas-ec-cert.pem
+          privatekeypath: /keys/kas-ec-private.pem
+          publickeypath: /keys/kas-ec-cert.pem
   port: 8080
 opa:
   embedded: true # Only for local development
