fix(core): example configs should specify cors.allowedorigins as []string

--- a/opentdf-example-no-kas.yaml
+++ b/opentdf-example-no-kas.yaml
@@ -22,7 +22,8 @@ server:
   cors:
     enabled: false
     # '*' to allow any origin or a specific domain like 'https://yourdomain.com'
-    allowedorigins: "*"
+    allowedorigins: 
+      - "*"
     # List of methods. Examples: 'GET,POST,PUT'
     allowedmethods:
       - GET
