fix(core): update default casbin auth policy

--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -34,13 +34,13 @@ server:
     issuer: http://localhost:8888/auth/realms/opentdf
     policy:
       ## Default policy for all requests
-      default: #"role:readonly"
+      default: #"role:standard"
       ## Dot notation is used to access nested claims (i.e. realm_access.roles)
       claim: # realm_access.roles
       ## Maps the external role to the opentdf role
       ## Note: left side is used in the policy, right side is the external role
       map:
-        readonly: opentdf-readonly
+        standard: opentdf-standard
         admin: opentdf-admin
         user: default-roles-opentdf
         org-admin: opentdf-org-admin
@@ -50,7 +50,7 @@ server:
         ## Roles (prefixed with role:)
         # org-admin - organization admin
         # admin - admin
-        # readonly - readonly
+        # standard - standard
         # user - rewrap
         # unknown - unknown role or no role
         ## Actions
@@ -102,22 +102,22 @@ server:
         p,	role:admin,		/key-access-servers*,												*,			allow
         p,	role:admin,		/kas.AccessService/LegacyPublicKey,					*,			allow
         
-        ## Role: Readonly
+        ## Role: Standard
         ## gRPC routes
-        p,	role:readonly,		policy.*,																read,			allow
-        p,	role:readonly,		kasregistry.*,													read,			allow
-        p,	role:readonly,		kas.AccessService/Info,		 		             *,			allow
-        p,	role:readonly,    kas.AccessService/Rewrap, 			           *,			allow
-        p,	role:readonly,    kas.AccessService/LegacyPublicKey,				 *,			allow
-        p,	role:readonly,    kas.AccessService/PublicKey,							 *,			allow
+        p,	role:standard,		policy.*,																read,			allow
+        p,	role:standard,		kasregistry.*,													read,			allow
+        p,	role:standard,		kas.AccessService/Info,		 		             *,			allow
+        p,	role:standard,    kas.AccessService/Rewrap, 			           *,			allow
+        p,	role:standard,    kas.AccessService/LegacyPublicKey,				 *,			allow
+        p,	role:standard,    kas.AccessService/PublicKey,							 *,			allow
         ## HTTP routes
-        p,	role:readonly,		/health,																read,			allow
-        p,	role:readonly,		/attributes*,														read,			allow
-        p,	role:readonly,		/namespaces*,														read,			allow
-        p,	role:readonly,		/subject-mappings*,											read,			allow
-        p,	role:readonly,		/resource-mappings*,										read,			allow
-        p,	role:readonly,		/key-access-servers*,										read,			allow
-        p,	role:readonly,		/kas.AccessService/LegacyPublicKey,			read,			allow
+        p,	role:standard,		/health,																read,			allow
+        p,	role:standard,		/attributes*,														read,			allow
+        p,	role:standard,		/namespaces*,														read,			allow
+        p,	role:standard,		/subject-mappings*,											read,			allow
+        p,	role:standard,		/resource-mappings*,										read,			allow
+        p,	role:standard,		/key-access-servers*,										read,			allow
+        p,	role:standard,		/kas.AccessService/LegacyPublicKey,			read,			allow
         
         # Public routes
         ## gRPC routes
