--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -37,7 +37,7 @@ server:
       - "opentdf-sdk"
     policy:
       ## Default policy for all requests
-      default: #"role:readonly"
+      default: #"role:standard"
       ## Role map is used to map external roles to opentdf roles (opentdf_role:idp_role) the benefit of this is that you
       ## can use the builtin policy if desired
       roles:
@@ -46,7 +46,7 @@ server:
         ## Maps the external role to the opentdf role
         ## Note: left side is used in the policy, right side is the external role
         map:
-        #  readonly: opentdf-readonly
+        #  standard: opentdf-standard
         #  admin: opentdf-admin
         #  org-admin: opentdf-org-admin
       ## Custom policy (see examples https://github.com/casbin/casbin/tree/master/examples)
