--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -34,13 +34,13 @@ server:
     issuer: http://keycloak:8888/auth/realms/opentdf
     policy:
       ## Default policy for all requests
-      default: #"role:readonly"
+      default: #"role:standard"
       ## Dot notation is used to access nested claims (i.e. realm_access.roles)
       claim: # realm_access.roles
       ## Maps the external role to the opentdf role
       ## Note: left side is used in the policy, right side is the external role
       map:
-      #  readonly: opentdf-readonly
+      #  standard: opentdf-standard
       #  admin: opentdf-admin
       #  org-admin: opentdf-org-admin
 
