--- a/opentdf-dev.yaml
+++ b/opentdf-dev.yaml
@@ -40,94 +40,16 @@ server:
       ## Maps the external role to the opentdf role
       ## Note: left side is used in the policy, right side is the external role
       map:
-        standard: opentdf-standard
-        admin: opentdf-admin
-        user: default-roles-opentdf
-        org-admin: opentdf-org-admin
+        # standard: opentdf-standard
+        # admin: opentdf-admin
+        # org-admin: opentdf-org-admin
 
       ## Custom policy (see examples https://github.com/casbin/casbin/tree/master/examples)
-      csv: |
-        ## Roles (prefixed with role:)
-        # org-admin - organization admin
-        # admin - admin
-        # standard - standard
-        # user - rewrap
-        # unknown - unknown role or no role
-        ## Actions
-        # read - read the resource
-        # write - write to the resource
-        # delete - delete the resource
-        # unsafe - unsafe actions
-        
-        # Role: user
-        p,	role:user,		kas.AccessService/PublicKey,						read,			allow
-        p,	role:user,		kas.AccessService/Rewrap, 			        write,		allow
-        p,	role:user,		/,																      read,			allow
-        p,	role:user,		/kas/kas_public_key,  									read,			allow
-        p,	role:user,		/kas/v2/kas_public_key,									read,			allow
-        p,	role:user,		/kas/v2/rewrap,													write,		allow
-        p,	role:user,		/entityresolution/resolve,							write,  	allow
-        
-        # Role: Org-Admin
-        ## gRPC routes
-        p,	role:org-admin,		policy.*,																*,			allow
-        p,	role:org-admin,		kasregistry.*,													*,			allow
-        p,	role:org-admin,		kas.AccessService/LegacyPublicKey,			*,			allow
-        p,	role:org-admin,		kas.AccessService/PublicKey,						*,			allow
-        p,	role:org-admin,		kas.AccessService/Rewrap, 			            *,			allow
-        ## HTTP routes
-        p,	role:org-admin,		/health,																*,			allow
-        p,	role:org-admin,		/attributes*,														*,			allow
-        p,	role:org-admin,		/namespaces*,														*,			allow
-        p,	role:org-admin,		/subject-mappings*,											*,			allow
-        p,	role:org-admin,		/resource-mappings*,										*,			allow
-        p,	role:org-admin,		/key-access-servers*,										*,			allow
-        p,	role:org-admin,		/kas.AccessService/LegacyPublicKey,			*,			allow
-        # add unsafe actions to the org-admin role
-        
-        # Role: Admin
-        ## gRPC routes
-        p,	role:admin,		policy.*,																		*,			allow
-        p,	role:admin,		kasregistry.*,															*,			allow
-        p,	role:admin,		kas.AccessService/Info,					            *,			allow
-        p,	role:admin,		kas.AccessService/Rewrap, 			            *,			allow
-        p,	role:admin,		kas.AccessService/LegacyPublicKey,					*,			allow
-        p,	role:admin,		kas.AccessService/PublicKey,								*,			allow
-        ## HTTP routes
-        p,	role:admin,		/health,																		*,			allow
-        p,	role:admin,		/attributes*,																*,			allow
-        p,	role:admin,		/namespaces*,																*,			allow
-        p,	role:admin,		/subject-mappings*,													*,			allow
-        p,	role:admin,		/resource-mappings*,												*,			allow
-        p,	role:admin,		/key-access-servers*,												*,			allow
-        p,	role:admin,		/kas.AccessService/LegacyPublicKey,					*,			allow
-        
-        ## Role: Standard
-        ## gRPC routes
-        p,	role:standard,		policy.*,																read,			allow
-        p,	role:standard,		kasregistry.*,													read,			allow
-        p,	role:standard,		kas.AccessService/Info,		 		             *,			allow
-        p,	role:standard,    kas.AccessService/Rewrap, 			           *,			allow
-        p,	role:standard,    kas.AccessService/LegacyPublicKey,				 *,			allow
-        p,	role:standard,    kas.AccessService/PublicKey,							 *,			allow
-        ## HTTP routes
-        p,	role:standard,		/health,																read,			allow
-        p,	role:standard,		/attributes*,														read,			allow
-        p,	role:standard,		/namespaces*,														read,			allow
-        p,	role:standard,		/subject-mappings*,											read,			allow
-        p,	role:standard,		/resource-mappings*,										read,			allow
-        p,	role:standard,		/key-access-servers*,										read,			allow
-        p,	role:standard,		/kas.AccessService/LegacyPublicKey,			read,			allow
-        
-        # Public routes
-        ## gRPC routes
-        p,	role:unknown,			kas.AccessService/LegacyPublicKey,			other,	allow
-        p,	role:unknown,			kas.AccessService/PublicKey,						other,	allow
-        ## HTTP routes
-        p,	role:unknown,			/health,																read,		allow
-        p,	role:unknown,			/kas/v2/kas_public_key,									read,		allow
-        p,	role:unknown,			/kas/kas_public_key,										read,		allow
-        p,	role:unknown,			/entityresolution/resolve,							write,	allow
+      csv: #|
+      #  p, role:org-admin, policy:attributes, *, *, allow
+      #  p, role:org-admin, policy:subject-mappings, *, *, allow
+      #  p, role:org-admin, policy:resource-mappings, *, *, allow
+      #  p, role:org-admin, policy:kas-registry, *, *, allow
 
       ## Custom model (see https://casbin.org/docs/syntax-for-models/)
       model: #|
