--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -186,18 +186,9 @@ jobs:
           log-output-if: true
           wait-for: 90s
       - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
-      - run: grpcurl -plaintext localhost:8080 list
-      - run: grpcurl -plaintext localhost:8080 grpc.health.v1.Health.Check
-      - run: grpcurl -plaintext localhost:8080 kas.AccessService/PublicKey
-      - run: curl --show-error --fail-with-body --insecure localhost:8080/kas/v2/kas_public_key
-      - run: curl --show-error --fail-with-body --insecure localhost:8080/kas/v2/kas_public_key?algorithm=ec:secp256r1
-      - run: |-
-          curl_status=$(curl -o /dev/null -s -w "%{http_code}" localhost:8080/kas/v2/kas_public_key?algorithm=invalid)
-          [ $curl_status = 404 ]
-      - run: grpcurl -d '{"algorithm":"invalid"}' -plaintext localhost:8080 kas.AccessService/PublicKey  2>&1  | grep NotFound
-      - run: go run ./examples encrypt "Hello Virtru"
-      - run: go run ./examples decrypt sensitive.txt.tdf
-      - run: go run ./examples decrypt sensitive.txt.tdf | grep "Hello Virtru"
+      - name: Setup Bats and bats libs
+        uses: bats-core/bats-action@2.0.0
+      - run: test/service-start.bats
       - name: create roundtrip test data and run tests
         run: go test ./service/rttests -v
 
